Cleanup of code, add active/inactive hotSpot radius

--- a/arm_server/package.json
+++ b/arm_server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "arm_web",
+  "name": "arm_server",
   "version": "0.0.1",
-  "description": "Web interface for the RobotArm controller.",
-  "main": "arm_web.js",
+  "description": "JSON.RPC and key interface for the RobotArm controller.",
+  "main": "arm_server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +12,6 @@
   "license": "MIT License",
   "dependencies": {
     "jayson": "~1.1.1",
-    "express": "~4.8.5",
-    "body-parser": "~1.6.5",
-    "debug": "~1.0.4"
+    "keypress": "~0.2.1",
   }
 }
