Add support for websockets for messages, keypress for control

--- a/arm_web/package.json
+++ b/arm_web/package.json
@@ -14,6 +14,6 @@
     "jayson": "~1.1.1",
     "express": "~4.8.5",
     "body-parser": "~1.6.5",
-    "debug": "~1.0.4"
+    "keypress": "~0.2.1"
   }
 }
